# ghostcall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.tape  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: llm_output.py
src/ghostcall/: __main__.py  checker.py  cli.py  markdown.py  output.py  parser.py  suggest.py
tests/: test_checker.py  test_cli.py  test_markdown.py  test_parser.py  test_suggest.py
